# RoboForgeAI

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
docs/: adr_001_m1_architecture.md  adr_002_component_library.md  adr_003_rule_engine_policy.md  adr_004_ai_governance.md  adr_005_pilot_gtm_validation.md  dev_setup.md  ipc_flow.md  m1_execution_tracker.md  m1_implementation_plan.md  release_checklist.md  requirements_v2.md  roadmap_24m.md  ui_changelog.md  ui_flow.md
examples/: bracket_demo.yaml
src/mmcad/: app_service.py  cli.py  gui.py  ipc_api.py  project_io.py
src/mmcad/export/: freecad_export.py
src/mmcad/parts/: basic.py
tests/: test_app_service.py  test_cli_smoke.py  test_cli_validation.py  test_design_report.py  test_gui.py  test_ipc_api.py  test_parts_basic.py  test_project_io.py
